--- a/package.json
+++ b/package.json
@@ -1,21 +1,20 @@
 {
-  "name": "final-project",
-  "version": "0.0.0",
-  "private": true,
-  "scripts": {
-    "start": "node ./bin/www"
-  },
-  "dependencies": {
-    "bindings": "^1.5.0",
-    "cookie-parser": "~1.4.4",
-    "debug": "~2.6.9",
-    "express": "~4.16.1",
-    "git": "^0.1.5",
-    "http-errors": "~1.6.3",
-    "make": "^0.8.1",
-    "morgan": "~1.9.1",
-    "mysql": "^2.18.1",
-    "pug": "2.0.0-beta11",
-    "time": "^0.12.0"
-  }
+    "name": "final-project",
+    "version": "0.0.0",
+    "private": true,
+    "scripts": {
+        "start": "node ./bin/www"
+    },
+    "dependencies": {
+        "cookie-parser": "~1.4.4",
+        "debug": "~2.6.9",
+        "express": "~4.16.1",
+        "git": "^0.1.5",
+        "http-errors": "~1.6.3",
+        "make": "^0.8.1",
+        "morgan": "~1.9.1",
+        "mysql": "^2.18.1",
+        "pug": "2.0.0-beta11"
+
+    }
 }
